# atomiq

./: .gitignore  BLOCKCHAIN_FEATURES.md  BLOCKCHAIN_GAMES_IMPLEMENTATION.md  BLOCKCHAIN_TEST_RESULTS.md  CASINO_GAMES.md  Cargo.toml  DIRECT_COMMIT_SUCCESS.md  HTTPS_STATUS.md  IMPLEMENTATION_COMPLETE.md  PERSISTENCE.md  README.md  REORGANIZATION_COMPLETE.md  SIZE_BASED_PRUNING.md  STORAGE_OPTIMIZATIONS.md  atomiq.toml  check_keys.rs  comprehensive_test.sh  inspect_keys.rs  test_all.sh  test_http_coinflips.py
DB/test_db_0/: IDENTITY  LOG  OPTIONS-000007
DB/test_db_1/: IDENTITY  LOG  OPTIONS-000007
DB/test_db_2/: IDENTITY  LOG
certs/: server.key  server.pem
deployment/certs/: server.crt
deployment/docker/: Dockerfile  docker-compose.yml
deployment/monitoring/: prometheus.yml
deployment/nginx/: nginx.conf
docs/: CLEAN_CODE_COMPLETE.md  COMPLETE.md  DEPLOYMENT.md  FINALIZATION.md  FLOW_DIAGRAMS.md  IMPLEMENTATION_SUMMARY.md  MAIN_README_OLD.md  QUICK_REFERENCE.md  README.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  STAGE2_TEST_REPORT.md
examples/: api_with_finalization.rs  blockchain_casino_game.rs  blockchain_game_integration_test.rs  clean_architecture_demo.rs  generate_cert.sh  test_coinflip.rs  test_coinflip_new.rs  test_updated_api_endpoints.rs  vrf_block_finalization.rs
scripts/: deploy.sh  test_all.sh  test_api.sh  test_games.sh  test_modes.sh  test_restart_stability.sh  test_settlement.sh
src/: api_main.rs  benchmark.rs  blockchain_game_processor.rs  config.rs  direct_commit.rs  errors.rs  factory.rs  fairness.rs  fast_main.rs  finalization.rs  game_store.rs  inspect_db_main.rs  lib.rs  lib_old.rs  main.rs  main_unified.rs  metrics.rs  network.rs  services.rs  simple_main.rs  single_validator_main.rs  state_manager.rs  storage.rs  transaction_pool.rs
src/api/: cache.rs  concurrent_handler.rs  errors.rs  games.rs  games_old.rs  games_wrappers.rs  handlers.rs  load_balancing.rs  lock_free_storage.rs  middleware.rs  mod.rs  models.rs  monitoring.rs  routes.rs  security.rs  server.rs  settlement.rs  storage.rs  websocket.rs
src/common/: config.rs  mod.rs  traits.rs  types.rs
src/games/: api_endpoints.rs  mod.rs  pending_pool.rs  processor.rs  settlement.rs  test_framework.rs  types.rs  vrf_engine.rs
tests/: db_persistence_test.rs
tools/: backfill_settlement_index.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx  index.css
ui/src/api/: client.ts  types.ts
ui/src/components/: BarChart.tsx
ui/src/pages/: CoinflipPage.tsx  VerifyPage.tsx
ui/src/vrf/: verify.ts
