[package]
name = "atomiq"
version = "0.1.0"
edition = "2021"
default-run = "atomiq"

[[bin]]
name = "atomiq"
path = "src/main.rs"

[[bin]]
name = "atomiq-unified"
path = "src/main_unified.rs"

[[bin]]
name = "atomiq-fast"
path = "src/fast_main.rs"

[[bin]]
name = "simple_blockchain"
path = "src/simple_main.rs"

[[bin]]
name = "single_validator"
path = "src/single_validator_main.rs"

[[bin]]
name = "inspect_db"
path = "src/inspect_db_main.rs"

[[bin]]
name = "atomiq-api"
path = "src/api_main.rs"

[[bin]]
name = "api-finalized"
path = "src/bin/api_finalized.rs"

[dependencies]
hotstuff_rs = "0.4.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
rocksdb = "0.22"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
crossbeam = "0.8"
rand = "0.8"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
hex = "0.4"
thiserror = "1.0"  # Error handling
axum = { version = "0.7", features = ["ws"] }  # WebSocket support
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tempfile = "3.8"
# High-performance concurrent request handling
dashmap = "5.5"
crossbeam-channel = "0.5"
notify = "6.1"
lru = "0.12"
once_cell = "1.19"
futures = "0.3"
futures-util = "0.3"  # For WebSocket stream handling
tokio-stream = "0.1"
# WebSocket and real-time features
tokio-tungstenite = "0.20"  # WebSocket implementation
prometheus = "0.13"  # Metrics collection
# VRF for provably fair games
schnorrkel = "0.11"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }